@@ -92,10 +92,23 @@ var requireScript = "var $m = require('mochiscript').mochi; $m.PUSH_ROOT(root);"
 var endScript = "$m.POP_ROOT();";
 if (require.extensions) {
   require.extensions['.ms'] = function(module, filename) {
-    return module._compile($m.parse(requireScript + fs.readFileSync(filename, 'utf8') + endScript), filename);
+    var content = fs.readFileSync(filename, 'utf8');
+    try {
+      var parsed = $m.parse(content);
+    } catch(e) {
+      console.log("Error parsing " + filename + "!");
+      throw e;
+    }
+
+    return module._compile(requireScript + parsed + endScript, filename);
   };
 } else if (require.registerExtension) {
-  require.registerExtension('.ms', function(content) {
-    return $m.parse(requireScript + content);
+  require.registerExtension('.ms', function(content, filename) {
+    try {
+      return $m.parse(requireScript + content + endScript);
+    } catch(e) {
+      console.warn("Error parsing mochiscript.");
+      throw e;
+    }
   });
 }
