@@ -1,6 +1,7 @@
 ### 0.6.12
   
-  * fixing bad merge
+  * allowing arbitrary mochiscript code in foreach braces
+  * a little bit better error reporting when there is a parse error
 
 ### 0.6.11
 
